+ support for sending file content as SOAP body + some fixes
git-svn-id: http://svn.codehaus.org/xfire/trunk/xfire@2123 c7d0bf07-ec0d-0410-b2cc-d48fa9be22ba